cmd/tools/vvet/tests/array_init_one_val.vv
fn main() {
	if 1 in [1] {
		println('hello world')
	}
	bar := 'bar'
	if 'foo' !in [bar] {
		println('hello world')
	}
}
